--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@
 
 # builds
 /build
+
+# Godot-specific ignores
+.import/
+export.cfg
+export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
+
+# Mono-specific ignores
+.mono/
+data_*/
+mono_crash.*.json
+
+# Visual Studio Code
+.vscode/
+*.code-workspace
+.history/
+
+# Visual Studio 2015/2017 cache/options directory
+.vs/
